2008-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* chartab.c (Foptimize_char_table, optimize_sub_char_table):
	Add a `test' argument so another predicate than `equal' can be used.
	(map_sub_char_table): Use `eq' rather than `equal' to merge ranges.
	(map_char_table): Remove unused vars `c' and `i'.
	* lisp.h (Foptimize_char_table): Adjust declaration.
	* charset.c (Fclear_charset_maps): Adjust call to Foptimize_char_table.

2008-05-30  Kenichi Handa  <handa@m17n.org>

	* font.c (Ffont_info): Define only if HAVE_WINDOW_SYSTEM is defined.
	(syms_of_font): Defsubr Sfont_info only if HAVE_WINDOW_SYSTEM is
	defined.

2008-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* data.c (Fmake_variable_buffer_local, Fmake_local_variable)
	(Fmake_variable_frame_local): Disallow mixing buffer-local and
	frame-local settings for the same variable.

2008-05-29  Kenichi Handa  <handa@m17n.org>

	* coding.h (enum define_coding_utf8_arg_index): New enum.
	(enum coding_attr_index): Change coding_attr_utf_16_bom to
	coding_attr_utf_bom.
	(enum utf_bom_type): Rename from utf_16_bom_type.
	(struct utf_16_spec): Adjust for the above change.
	(struct coding_system): Add utf_8_bom in `spec' union.

	* coding.c (CODING_UTF_8_BOM): New macro.
	(enum coding_category): Delete coding_category_utf_8, add
	coding_category_utf_8_auto, coding_category_utf_8_nosig, and
	coding_category_utf_8_sig.
	(CATEGORY_MASK_UTF_8): Delete it.
	(CATEGORY_MASK_UTF_8_AUTO, CATEGORY_MASK_UTF_8_NOSIG)
	(CATEGORY_MASK_UTF_8_SIG): New macros.
	(CATEGORY_MASK_ANY): Delete CATEGORY_MASK_UTF_8, add
	CATEGORY_MASK_UTF_8_AUTO, CATEGORY_MASK_UTF_8_NOSIG, and
	CATEGORY_MASK_UTF_8_SIG.
	(CATEGORY_MASK_UTF_8): New macro.
	(UTF_BOM, UTF_8_BOM_1, UTF_8_BOM_2, UTF_8_BOM_3): New macros.
	(detect_coding_utf_8): Check BOM.
	(decode_coding_utf_8, encode_coding_utf_8): Handle BOM.
	(decode_coding_utf_16): Adjust for the change of enum utf_bom_type.
	(encode_coding_utf_16): Likewise.